@@ -1,9 +1,0 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-using System.Threading.Tasks;
-
-namespace Roguelike.Contents.Items.Lootbox.BossLootBox;
-internal class PlanteraLootBox {
-}
