@@ -3284,6 +3284,11 @@ Mods: {
 				DisplayName: Parry_ Buff
 				Description: Mods.Roguelike.Buffs.Parry_Buff.Description
 			}
+
+			DefenseMK1_Buff: {
+				DisplayName: Defense M K1_ Buff
+				Description: Mods.Roguelike.Buffs.DefenseMK1_Buff.Description
+			}
 		}
 
 		Configs: {
