@@ -222,7 +222,7 @@ PumpkinArmor.SetBonus:
 PearlwoodArmor.SetBonus:
 	'''
 	Increase movement speed by 35%
-	Attacking an enemy summons 6 hallow Swords that deals 12 damage with 4 seconds cooldown
+	Attacking an enemy summons 6 swords that deals 12 damage (CD: 4s)
 	During the day : Increases damage by 15% and defense by 12
 	When in Hallow biome : Hallow Swords deal 35 more damage
 	'''
@@ -280,9 +280,21 @@ TinArmor: {
 }
 
 CopperArmor: {
-	Head: + 2% chance to inflict Electrified on hit
-	Body: + 3% chance to inflict Electrified on hit
-	Leg: + 1% chance to inflict Electrified on hit
+	Head:
+		'''
+		+ 2% chance to inflict Electrified on hit
+		Increases critical damage against electrified target by 25%
+		'''
+	Body:
+		'''
+		+ 3% chance to inflict Electrified on hit
+		Getting hit inflict Electrified on target for 3s
+		'''
+	Leg:
+		'''
+		+ 1% chance to inflict Electrified on hit
+		Increases damage against electrified target by 12%
+		'''
 	SetBonus:
 		'''
 		+ 25% increased movement speed
@@ -306,7 +318,7 @@ IronArmor: {
 JungleArmor.SetBonus:
 	'''
 	When using magic weapon, you will shoot out magical leaf hover around player up to max of 10
-	Reaching max leafs, the leaf will home into the closest enemy when possible
+	Reaching max leafs, the leaf will homein toward the closest enemy when possible
 	'''
 
 LeadArmor: {
@@ -391,6 +403,7 @@ NinjaArmor: {
 GladiatorArmor: {
 	SetBonus:
 		'''
+		"Your life is a constant gladiate battle"
 		10 defense
 		Strengthen pieces effect the lower your health is
 		'''
